@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Format the issue number in Payflow requests to always be 2 digits [cody]
+#
 # * Move application_id to Gateway and Helper class respectively [cody]
 #
 # * Improve TrustCommerce documentation [cody]
